--- a/src/styles.css
+++ b/src/styles.css
@@ -185,6 +185,12 @@ h1 {
   color: white;
 }
 
+.restart {
+  background-color: white;
+  color: black;
+  padding: 4px 8px;
+}
+
 .visually-hidden {
   position: absolute;
   overflow: hidden;
